--- a/src/landingpage/index.html
+++ b/src/landingpage/index.html
@@ -14,6 +14,6 @@
   <body>
   <!-- <h1>Hello World</h1> -->
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
